# scenario_extraction_framework

./: .gitignore  Dockerfile  Dockerfile.first  Dockerfile.second  README.md  centerline.json  ego_frenet.json  helper.bash  laneletpresets.xml  lz4_streamdecode_error_fix.bash  map.osm  odom.json  plot2.py  process.py  process_bags.bash  scenario.json
catkin_ws/launch/: check_topic.launch  extract.launch  feature_model.launch  laneletsmap.launch  scenario_extraction.launch  validation_dataset.launch
catkin_ws/src/dataset_tools/custom_point_types/: CMakeLists.txt  package.xml
catkin_ws/src/dataset_tools/custom_point_types/include/custom_point_types/: point_xyzir.h  point_xyzirc.h  point_xyzirl.h  point_xyzirrgb.h  point_xyziruv.h  point_xyziruvcov.h
catkin_ws/src/dataset_tools/dataset_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/dataset_tools/dataset_msgs/include/dataset_msgs/: blank.hpp
catkin_ws/src/dataset_tools/dataset_msgs/msg/: DatasetEvent.msg  LocaliserStats.msg  Observation.msg
catkin_ws/src/dataset_tools/dataset_playback/: CMakeLists.txt  package.xml
catkin_ws/src/dataset_tools/dataset_playback/cmake/: Findgraphviz.cmake
catkin_ws/src/dataset_tools/dataset_playback/destination_files/: crashlab.yaml  main_quad.yaml
catkin_ws/src/dataset_tools/dataset_playback/include/dataset_playback/: dataset_panel.h
catkin_ws/src/dataset_tools/dataset_playback/launch/: run.launch
catkin_ws/src/dataset_tools/dataset_playback/src/: dataset_panel.cpp  main.cpp
catkin_ws/src/dataset_tools/dataset_tools/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/dataset_tools/dataset_tools/include/dataset_tools/: bag_input.hpp  bag_output.hpp  behavior_tree_pipeline.hpp  icp_matcher_pipeline.hpp  pipeline_components.hpp  pipeline_images.hpp  point_cloud_features_pipeline.hpp  run_pipeline.hpp
catkin_ws/src/dataset_tools/dataset_tools/src/: bag_input.cpp  bag_output.cpp  behavior_tree_pipeline.cpp  icp_matcher_pipeline.cpp  point_cloud_features_pipeline.cpp  run_pipeline.cpp
catkin_ws/src/dataset_tools/h264_bag_playback/: CMakeLists.txt  README.md  nodelet_definition.xml  package.xml  setup.bash
catkin_ws/src/dataset_tools/h264_bag_playback/config/: time_offsets.yaml
catkin_ws/src/dataset_tools/h264_bag_playback/include/h264_bag_playback/: bag_container.hpp  bag_static_transform_publisher.hpp  corrected_imu_playback.hpp  h264_bag_playback.hpp  helper_functions.hpp  replace_msg.h  video.hpp
catkin_ws/src/dataset_tools/h264_bag_playback/launch/: h264_playback.launch  nodelet_test.launch  replaceMsg_writeToBag.launch
catkin_ws/src/dataset_tools/h264_bag_playback/scripts/: convert_folder.sh  convert_multiple_folders.sh
catkin_ws/src/dataset_tools/h264_bag_playback/src/: bag_container.cpp  h264_bag_playback.cpp  helper_functions.cpp  replace_msg.cpp  video.cpp
catkin_ws/src/dataset_tools/h264_bag_playback/test/: bag_data.h.in  test_playback.cpp
catkin_ws/src/extraction/: CMakeLists.txt  package.xml
catkin_ws/src/extraction/src/: extraction.cpp  helper_functions.hpp
catkin_ws/src/feature_model/: CMakeLists.txt  package.xml
catkin_ws/src/feature_model/script/: feature_model.py
catkin_ws/src/gmsl_frame_msg/: CMakeLists.txt  package.xml
catkin_ws/src/gmsl_frame_msg/msg/: FrameInfo.msg
catkin_ws/src/ibeo_object_msg/: CMakeLists.txt  package.xml
catkin_ws/src/ibeo_object_msg/msg/: IbeoObject.msg
catkin_ws/src/lane_points_msg/: CMakeLists.txt  package.xml
catkin_ws/src/lane_points_msg/msg/: LanePoints.msg
catkin_ws/src/laneletsmap_generator/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/laneletsmap_generator/include/laneletsmap_generator/: Conversions.h  draw_shapes.hpp  laneletsmap_generator.hpp
catkin_ws/src/laneletsmap_generator/launch/: project_lidar.launch  semantic.launch  test_parameters.launch
catkin_ws/src/laneletsmap_generator/src/: helper_functions.hpp  laneletsmap_generator.cpp
generated_openx_files/: gate_south-end_north-end_20210528_064001.0.xodr  gate_south-end_north-end_20210528_064001.0_cutin_1.xosc  gate_south-end_north-end_20210528_064001.0_cutin_2.xosc  gate_south-end_north-end_20210528_064001.0_cutin_3.xosc  gate_south-end_north-end_20210602_060842.0.xodr  gate_south-end_north-end_20210608_054523.0.xodr  gate_south-end_north-end_20210608_054523.0_cutin_1.xosc  gate_south-end_north-end_20210615_043348.0.xodr  gate_south-end_north-end_20210615_043348.0_cutin_1.xosc  gate_south-end_north-end_20210615_043348.0_cutin_2.xosc  gate_south-end_north-end_20210615_043348.0_cutin_3.xosc  gate_south-end_north-end_20210616_044127.0.xodr  gate_south-end_north-end_20210616_044127.0_cutin_1.xosc  gate_south-end_north-end_20210616_044127.0_cutin_2.xosc
openx_generation/: 1  generate_openx.py
parameters/: esmini_data.py  generate_openx.py  plot.py  rss.py
parameters/esmini-bin_ubuntu/: log.txt  version.txt
parameters/plots/: comparison.psd
parameters/scenario_data/: gate_south-end_north-end_20210615_043348.0.cutin  gate_south-end_north-end_20210615_043348.0.cutout  gate_south-end_north-end_20210615_043348.0.laneletToOD
parameters/scenario_files/: gate_south-end_north-end_20210608_054523.0.xodr  gate_south-end_north-end_20210608_054523.0_cutin_1.xosc  gate_south-end_north-end_20210608_054523.0_cutin_2.xosc  gate_south-end_north-end_20210608_054523.0_cutin_3.xosc  gate_south-end_north-end_20210615_043348.0.xodr  gate_south-end_north-end_20210615_043348.0_cutin_1.xosc  gate_south-end_north-end_20210615_043348.0_cutin_2.xosc  gate_south-end_north-end_20210615_043348.0_cutin_3.xosc
