<?xml version="1.0"?>
<package format="2">
  <name>lane_points_msg</name>
  <version>0.0.0</version>
  <description>
    Message definition for lane points data
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  
  <maintainer email="dkar9051@uni.sydney.edu.au">Dhanoop Karunakaran</maintainer>
  <license>BSD</license>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>


</package>
